--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 *.log
+/Mod The Cube/Library
+/Personal Project/Library
+/Prototype 1/Library
+/Prototype 2/Library
+
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
