--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 /Prototype 2/Library/
 /Personal Project/Library/
 /Mod The Cube/Library
+/Prototype 3/Library/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
