--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 
 /Prototype 1/Library/
 /Prototype 2/Library/
+/Personal Project/Library/
+/Mod The Cube/Library
+/Prototype 3/Library/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
