--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 /Prototype 2/Library
 /Prototype 3/Library
 /Prototype 4/Library
-
+/Prototype 5/Library
 
 
 # MemoryCaptures can get excessive in size.
