--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,14 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 *.log
+/Prototype 1/Library/
+/Prototype 2/Library/
+/Personal Project/Library/
+/Mod The Cube/Library
+/Prototype 3/Library/
+/Prototype 4/Library/
+/Prototype 5/Library/
+
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
