--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@
 /Personal Project/Library/
 /Mod The Cube/Library
 /Prototype 3/Library/
+/Prototype 4/Library/
+/Prototype 5/Library/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
