--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 /Prototype 4/Library/
 /Prototype 5/Library/
 /Debug Project/Library/
+/Counting Prototype/Library/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
