--- a/.gitignore
+++ b/.gitignore
@@ -18,14 +18,9 @@
 /Prototype 3/Library/
 /Prototype 4/Library/
 /Prototype 5/Library/
+/Counting Prototype/Library/
+/Debug Project/Library/
 
-/Prototype 1/Library/
-/Prototype 2/Library/
-/Personal Project/Library/
-/Mod The Cube/Library
-/Prototype 3/Library/
-/Prototype 4/Library/
-/Prototype 5/Library/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
