--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,8 @@
 /Prototype 3/Library/
 /Prototype 4/Library/
 /Prototype 5/Library/
-
+/Counting prototype/Library
+/Debug project/Library
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
