--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 /Prototype 3/Library/
 /Prototype 4/Library/
 /Prototype 5/Library/
+/Counting prototype/Library
+/Debug Project/Library
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
